# pyprogen

./: .buildinfo  .buildinfo.bak  .bumpver.toml  .gitignore  Makefile  README.md  api.html  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  ressources.html  search.html  searchindex.js  setup.py  usage.html
.doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree  ressources.doctree  usage.doctree
.doctrees/api_doc/: cli.doctree  construct_project.doctree  create_structure.doctree  git_setup.doctree  install.doctree  run_progen.doctree  user_data.doctree  user_data_binder.doctree
.doctrees/usage_doc/: activate_venv.doctree  create_command.doctree  create_executable.doctree  create_module.doctree  documentation_setup.doctree  generating_doc.doctree  (+10 more)
_modules/: index.html
_sources/: api.rst.txt  index.rst.txt  installation.rst.txt  ressources.rst.txt  usage.rst.txt
api_doc/: cli.html  construct_project.html  create_structure.html  git_setup.html  install.html  run_progen.html  user_data.html  user_data_binder.html
examples/: example.py
pyprogen/: __init__.py  __main__.py  cli.py  construct_project.py  create_structure.py  git_setup.py  install.py  run_progen.py  user_data.py  user_data_binder.py
usage_doc/: activate_venv.html  create_command.html  create_executable.html  create_module.html  documentation_setup.html  generating_doc.html  git_and_push.html  git_setup.html  github_setup.html  managing_venv.html  project_structure.html  quick_start.html  running_tests.html  use_git.html  write_module_and_doc.html
(+67 files in other folders)
